# Exskeleton-Leg

./: .gitignore
Backend/: .env.example  .gitignore  Cargo.toml  README.md
Backend/migrations/: 202607170001_create_identity.sql
Backend/src/: app_state.rs  error.rs  lib.rs  main.rs
Backend/src/bootstrap/: config.rs  mod.rs  router.rs  state.rs
Backend/src/dto/: auth.rs
Backend/src/models/: base_response.rs  mod.rs  user.rs
Backend/src/modules/: mod.rs
Backend/src/modules/identity/: application.rs  domain.rs  infrastructure.rs  presentation.rs
Backend/src/modules/patients/: presentation.rs
Backend/src/repositories/: user_repository.rs
Backend/src/routes/: auth.rs  mod.rs
Backend/src/services/: auth_service.rs  mod.rs
Backend/src/shared/: presentation.rs
Mobile App/: README.md  analysis_options.yaml  build.yaml  flavorizr.yaml  pubspec.yaml
Mobile App/android/: settings.gradle
Mobile App/ios/: Podfile
Mobile App/lib/: di.config.dart  di.dart  flavors.dart  main.dart
Mobile App/linux/: CMakeLists.txt
Mobile App/macos/: Podfile
Mobile App/test/: auth_flow_test.dart  widget_test.dart
Pi/ros_ws/: .gitignore  README.md
codex/: 01-product-scope.md  02-system-architecture.md  03-domain-modules.md  04-backend-rust.md  05-data-model.md  06-api-contract.md  07-device-realtime-protocol.md  08-mobile-screens.md  09-material3-design-system.md  10-web-dashboard.md  11-safety-security-privacy.md  12-quality-roadmap.md  13-mobile-main-and-system-api-design.md  14-mobile-screen-blueprints-and-api-spec.md  README.md
leg/: pom.xml
(+112 files in other folders)
