[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken = "10.4.0"
chrono = { version = "0.4.45", features = ["serde"] }
thiserror = "2.0.18"
serde_repr = "0.1.20"
rand_core = { version = "0.9.5", features = ["os_rng"]  }
